Add brand colors

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -17,10 +17,20 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
 :root {
+  /* brand colors */
+  --mint: #6BBDAE;
+  --pale-green: #C0E3E0;
+  --green: #009688;
+  --bright-red: #EB5757;
+  --red: #DB4437;
+  --pale-gray: #EFEFEF;
+  --light-gray: #BDBDBD;
+  --gray: #A0A0A0;
+  --dark-gray: #444444;
+
   /* brand fonts */
   --primary-font: 'Poppins';
 }
-
 
 body {
   margin: 0;
@@ -32,4 +42,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  color: var(--green);
 }
