--- a/web/src/index.css
+++ b/web/src/index.css
@@ -15,6 +15,7 @@
  */
 
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+@import url("//cdn.muicss.com/mui-0.10.1/css/mui.min.css");
 
 :root {
   /* brand colors */
@@ -46,4 +47,8 @@ code {
 
 a {
   color: var(--green);
+}
+
+a:hover {
+  cursor: pointer;
 }
