Fix color names

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -25,9 +25,8 @@
   --bright-red: #EB5757;
   --red: #DB4437;
   --pale-gray: #EFEFEF;
-  --pale-gray: #BDBDBD;
-  --light-gray: #A0A0A0;
-  --gray: #3C3C3C;
+  --light-gray: #BDBDBD;
+  --gray: #A0A0A0;
   --dark-gray: #444444;
 
   /* brand fonts */
