--- a/web/src/index.css
+++ b/web/src/index.css
@@ -20,7 +20,8 @@
 :root {
   /* brand colors */
   --mint: #6BBDAE;
-  --pale-green: #C0E3E0;
+  --pale-green: #E3F2F1;
+  --light-green: #C0E3E0;
   --green: #009688;
   --bright-red: #EB5757;
   --red: #DB4437;
