--- a/web/src/index.css
+++ b/web/src/index.css
@@ -35,6 +35,7 @@
 }
 
 body {
+  width: 100vw;
   margin: 0;
   font-family: var(--primary-font), 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
