Show CommittedCustomerStatuses in ListingDetails page of a successful listing

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -23,6 +23,7 @@
   --pale-green: #E3F2F1;
   --light-green: #C0E3E0;
   --green: #009688;
+  --yellow: #EBCA57;
   --bright-red: #EB5757;
   --red: #DB4437;
   --pale-gray: #EFEFEF;
